# WorkFLOW2

./: .gitignore  CHAT_TRANSFER_CAPSULE_V1.md  DEV_CONTINUITY.md  MACHINE_CONTEXT.md  README.md  REPO_MAP.md  adaptive_trading_bot.py  adaptive_trading_gui_easy.py  codex_shortform_core_seed.rar  commands.json.corrupt_20260310_035312.bak  life_rpg_quests.json  life_rpg_tracker.py  trading_requirements.txt
dev_tools/: collect_logs.ps1
projects/GameRuAI/: PROJECT_MANIFEST.json  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_project.ps1  ui_screenshots_manifest.json  ui_validation_summary.json  ui_validation_summary.md  verification_summary.json  verification_summary.md
projects/GameRuAI/app/: __init__.py  bootstrap.py  config.py  logging_setup.py  main.py
projects/GameRuAI/app/assets/: __init__.py  archive_report.py  asset_intelligence.py  asset_manifest.py  asset_registry.py  asset_types.py  audio_preview.py  container_heuristics.py  explorer_service.py  preview_models.py  relevance_scoring.py  texture_preview.py  type_classifier.py
projects/GameRuAI/docs/: UI_BUILD_RULES.md  architecture.md  asset_research_mode.md  audio_analysis_lab.md  companion_mode.md  evidence_learning.md  knowledge_sources.md  learning_flow.md  media_mode.md  quality_and_reports.md  quickstart.md  roadmap.md  sync_pipeline.md  testing.md  translation_backends.md  voice_pipeline.md
projects/GameRuAI/scripts/: build_app.py  generate_demo_assets.py  run_dev.py  ui_doctor.py  ui_qa_product.py  ui_snapshot_runner.py  ui_validate.py
projects/GameRuAI/tests/: conftest.py
(+1384 files in other folders)
