[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameruai"
version = "0.1.0"
description = "Desktop MVP for local game translation and demo Russian voice adaptation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6,<6.9",
  "PyYAML>=6.0,<7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
